apps/ex3/nginx-monitoring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-monitoring
  name: nginx-monitoring
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-monitoring
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx-monitoring
    spec:
      volumes:
        - name: status
          emptyDir: {}
        
        - name: conf
          configMap:
            name: nginx-monitoring
            items:
              - key: nginx.conf
                path: nginx.conf
      
      containers:
      - image: bitnami/nginx:latest
        name: nginx
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          httpGet:
            path: '/readyz'
            port: 8080

        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          httpGet:
            path: '/healthz'
            port: 8080
        
        ports:
          - name: 'http'
            containerPort: 8080
        volumeMounts:
          - name: status
            mountPath: '/app/status/'
          - name: conf
            mountPath: '/opt/bitnami/nginx/conf/nginx.conf'
            subPath: 'nginx.conf'
        resources: {}
status: {}
