apps/ex3/nginx-monitoring-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-monitoring
  name: nginx-monitoring
  namespace: apps
spec:
  ports:
  - name: "http"
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx-monitoring
  type: ClusterIP
status:
  loadBalancer: {}
